# PokeDotDuel

./: .env.example  .gitignore  Anchor.toml  BACKEND_IMPLEMENTATION_SUMMARY.md  DOCKER_README.md  ENVIRONMENT_SETUP.md  PROJECT_COMPLETE_SUMMARY.md  README.md  START_GUIDE.md  check-services.js  create-test-user.js  create_cards_invoke.js  create_cards_manual.sql  create_cards_script.js  delete-test-user.js  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  docker-env-example.txt  env-example.txt  env.example  optimize-performance.js  package-lock.json  package.json  populate_pokedex_cache.js  populate_pokedex_cache.sql  run-complete-project.js  setup-env.js  start-pokedot.js  start-project.js  test-backend.js  test-integration.ts  test-runner-simple.js  test-runner.js  verify-implementation.js
apps/backend/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json
apps/web/: .dockerignore  Dockerfile  Dockerfile.dev  POKEMON_FONT_SETUP.md  TYPESCRIPT_CLIENT_README.md  next.config.js  package.json  tailwind.config.js
apps/websocket-server/: .env.example  README.md  (+2 more)
docs/: API.md  ARCHITECTURE.md  SETUP.md  VRF_ACCOUNT_INFO.md  VRF_RUST_SETUP.md  VRF_SETUP.md
programs/solana/packs_vrf/: Cargo.toml
programs/solana/packs_vrf/src/: lib.rs
scripts/: .env.example  dev.ps1  dev.sh  migrate-gen1-data.ts  migrate-showdown-data.ts  populate-supabase.ts  test-docker.sh
supabase/: config.toml
tests/: backend.test.ts  battle-engine.test.ts  mock-solana-programs.ts  packs_vrf.test.ts  pvp_escrow.test.ts  vrf_integration.test.ts
(+109 files in other folders)
